--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name="ece641.March11th.test.DatabaseTestActivity"
             android:label="@string/title_activity_database_test" >
         </activity>
+        <activity
+            android:name="ece641.March11th.map.GPSLoggerActivity"
+            android:label="@string/title_activity_gpslogger" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -56,7 +60,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
      The following two permissions are not required to use
-     Google Maps Android API v2, but are recommended.
+     Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
