--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,22 @@
             android:name="ece641.March11th.map.GPSLoggerActivity"
             android:label="@string/title_activity_gpslogger" >
         </activity>
+        <activity
+            android:name="ece641.March11th.IO.AddActivity"
+            android:label="@string/title_activity_add" >
+        </activity>
+        <activity
+            android:name="ece641.March11th.IO.AddContactActivity"
+            android:label="@string/title_activity_add_contact" >
+        </activity>
+        <activity
+            android:name="ece641.March11th.IO.ViewContactActivity"
+            android:label="@string/title_activity_view_contact" >
+        </activity>
+        <activity
+            android:name="ece641.March11th.IO.ViewLogActivity"
+            android:label="@string/title_activity_view_log" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -60,7 +76,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
      The following two permissions are not required to use
-     Google Maps Android API v2, but are recommended.
+     Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
