--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,12 +24,13 @@
             android:name="ece641.March11th.ui.DisplayActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" >
+            android:theme="@style/FullscreenTheme"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="ece641.March11th.ui.UserLoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,42 +40,43 @@
         <activity
             android:name="ece641.March11th.test.TestActivity"
             android:label="@string/title_activity_test"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="ece641.March11th.ui.ShowAllUsersActivity"
             android:label="@string/title_activity_show_all_users"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="ece641.March11th.test.DatabaseTestActivity"
             android:label="@string/title_activity_database_test"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="ece641.March11th.map.GPSLoggerActivity"
             android:label="@string/title_activity_gpslogger"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="ece641.March11th.IO.AddActivity"
             android:label="@string/title_activity_add"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="ece641.March11th.IO.AddContactActivity"
             android:label="@string/title_activity_add_contact"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
+t
         </activity>
         <activity
             android:name="ece641.March11th.IO.ViewContactActivity"
             android:label="@string/title_activity_view_contact"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="ece641.March11th.IO.ViewLogActivity"
             android:label="@string/title_activity_view_log"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
         </activity>
         <!-- for map application -->
         <meta-data
@@ -79,20 +88,9 @@
 
         <activity
             android:name="ece641.March11th.ui.WelcomeActivity"
-            android:label="@string/title_activity_weicome" >
+            android:label="@string/title_activity_welcome" >
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <!--
-     The following two permissions are not required to use
-     Google Maps Android API v2, but are recommended.
-    -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
