--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -101,6 +101,10 @@
             android:name="ece641.March11th.IO.ViewUserInfoActivity"
             android:label="@string/title_activity_view_user_info" >
         </activity>
+        <activity
+            android:name="ece641.March11th.map.ViewOnMapActivity"
+            android:label="@string/title_activity_view_on_map" >
+        </activity>
     </application>
 
     <uses-feature
