--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -29,8 +29,7 @@
         </activity>
         <activity
             android:name="ece641.March11th.ui.UserLoginActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -104,6 +103,11 @@
         <activity
             android:name="ece641.March11th.map.ViewOnMapActivity"
             android:label="@string/title_activity_view_on_map" >
+        </activity>
+        <activity
+            android:name="ece641.March11th.ui.AnalysisActivity"
+            android:label="@string/title_activity_analysis"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
